--- a/written/eLifeRevision/Response.tex
+++ b/written/eLifeRevision/Response.tex
@@ -235,6 +235,7 @@ We have made serious effort to improve our presentation and explanation of EPI (
 Furthermore, we have focused on clearly motivating and describing each neural circuit model studied in this manuscript.
 Sufficient mathematical detail is written in each results section, while full details are presented in Methods.
 All code for training EPI on these models and their analysis are available in well-documented scripts and notebooks in our github repository.
+\begin{verbatim} https://github.com/cunningham-lab/epi \end{verbatim}
 
 We modify our writing to clarify that EPI is not a key to all of theoretical neuroscience, but rather a powerful solution to inverse problems in neural circuit modeling.
 Inverse problems are indeed a major part of theoretical neuroscience, and their solutions are important for the evaluation  of neural circuit models.
@@ -472,5 +473,6 @@ Thank you for these references. We have incorporated most of them where appropri
 \textbf{Code should be made available in well-documented form if it isn't already. }
 
 Please see the github repository for this manuscript, which includes code for the EPI method and the analyses that went into each figure.
+\begin{verbatim} https://github.com/cunningham-lab/epi \end{verbatim}
 
 \end{document}
