--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -1438,7 +1438,8 @@ EPI optimization was run using three different random seeds for architecture ini
 We used $i_{\text{max}} = 2,000$ iterations per epoch.
 The distributions shown are those of the architectures converging with criteria $N_{\text{test}} = 100$ at greatest entropy across three random seeds.
 Optimization details are shown in Figure \ref{fig:V1_2}.
-The sums of squares of each pair of parameters are shown for each EPI distribution in Figure \ref{fig:V1_3}.
+The sums of squares of each pair of parameters are shown for each EPI distribution in Figure \ref{fig:V1_3}.  
+The plots are histograms of 500 samples from each EPI distribution from which the significance $p$-values of Section \ref{results_V1} are determined.
 
 \begin{figure}[h]
 \caption{EPI inferred distribution for $\mathcal{X}(10\text{Hz})$.
