--- a/written/eLifeRevision/Response.tex
+++ b/written/eLifeRevision/Response.tex
@@ -67,7 +67,7 @@ In the introduction, we present our method by focusing on the key aspect of EPI 
 Specifically, we explain how current methodology infers the parameters producing computation by conditioning on \textit{exemplar datasets} (real or simulated), whereas in EPI we condition directly on the \textit{emergent properties} that define the computation.  We also note (and have an appendix detailing) how EPI is in fact doing variational bayesian inference, but that the parameterization of the problem as we solve it is more natural given the goal of reproducing a computation.  In other words, the methodology is mathematically sound and directly connected to well-worn techniques, but the specific form we solve is the appropriate choice for the motivating problem.
 
 \begin{displayquote}
-Lines 46-54\\
+Lines 44-52\\
 ``\quoting{intro_data_ep}''
 \end{displayquote}
 
@@ -75,7 +75,7 @@ We now frame the method within the more general context of parameter inference t
 We have made concentrated efforts to simplify language and to relate to all relevant existing methodology.
 
 \begin{displayquote}
-Lines 55-65\\
+Lines 53-63\\
 ``\quoting{intro_epi}''
 \end{displayquote}
 
@@ -83,10 +83,10 @@ To improve clarity, we have overhauled and simplified the notation and presentat
 Emergent properties are now denoted with $\mathcal{X}$: rather than a vector of first- and second-moment constraints, we present the emergent property more readably (and equivalently) as mean and variance constraints on emergent property statistics:
 
 \begin{displayquote}
-Line 759 \\
+Line 739 \\
 ``
-\begin{equation} \tag{11}
-\mathcal{X}: \mathbb{E}_{\mathbf{z},\mathbf{x}}\left[f(\mathbf{x}; \mathbf{z})\right] = \bm{\mu}, \text{Var}_{\mathbf{z},\mathbf{x}}\left[f(\mathbf{x}; \mathbf{z})\right] = \bm{\sigma}^2.
+\begin{equation} \tag{12}
+\mathcal{X}:~ \mathbb{E}_{\mathbf{z},\mathbf{x}}\left[f(\mathbf{x}; \mathbf{z})\right] = \bm{\mu},~~ \text{Var}_{\mathbf{z},\mathbf{x}}\left[f(\mathbf{x}; \mathbf{z})\right] = \bm{\sigma}^2
 \end{equation}''
 \end{displayquote}
 
@@ -96,7 +96,7 @@ In our revised writing, we deemphasize the role of maximum entropy in the EPI al
 We show in Section \ref{methods_VI} that EPI is exactly variational inference (this was mentioned in the previous draft but not as a point of connection and focus, as it should be and now is).   Therefore, it makes sense to present EPI in the main text as a statistical inference technique that constrains the predictions of the inferred parameters to be an emergent property, and leave the details of the maximum entropy to the technically proficient in Section \ref{methods_EPI}.
 
 \begin{displayquote}
-Lines 156-158\\
+Lines 152-154\\
 ``\quoting{results_ME}''
 \end{displayquote}
 
@@ -130,21 +130,21 @@ However, these relative drawbacks of EPI with respect to SNPE can be considered 
 On the balance, these two methods occupy different areas of use, and both are equivalently ``generally/straightforwardly applicable''; we believe the new analyses and discussion in the manuscript clarify that, as it is a key point for practitioners going forward.   
 
 \begin{displayquote}
-Lines 439-451\\
+Lines 432-444\\
 ``\quoting{discussion_gradients}''
 \end{displayquote}
 
 Furthermore, EPI focuses the entire expressivity of the approximating deep probability distribution on a single distribution, rather than spreading this expressivity to some uncharacterized degree across the chosen training distribution of amortized posteriors in SNPE (Section 5.1.1 Related Approaches).
 
 \begin{displayquote}
-Lines 828-833\\
+Lines 829-835\\
 ``\quoting{amortization}''
 \end{displayquote}
  
 Finally, we emphasize that EPI does something fundamental that SNPE and other inference techniques cannot.  EPI learns parameter distributions whose predictions are constrained to produce the emergent property.  We show in Figure 2 and Supplementary Figure RNN2 that SNPE does not control the statistical properties of its predictions, resulting in the inference of many parameters that are not consistent with the desired emergent property.
 
 \begin{displayquote}
-Lines 232-242\\
+Lines 227-237\\
 ``\quoting{rnn_constrained}''
 \end{displayquote}
 
@@ -159,14 +159,14 @@ analyses are made possible by EPI.
 \item  In the revised manuscript we clarify that novel theoretical insights are not being made into the STG subcircuit model or the recurrent neural network models.  The STG subcircuit serves as a motivational example to explain how EPI works, and we use RNNs exhibiting stable amplification as a substrate for scalability analyses.  
 
 \begin{displayquote}
-Lines 77-81 \\
+Lines 75-79 \\
 ``\quoting{intro_results1}''
 \end{displayquote}
 
 We do produce strong theoretical insights into a model of primary visual cortex (Section 3.4) and superior colliculus (Section 3.5).  These analyses have substantially more depth than the previous manuscript.
 
 \begin{displayquote}
-Lines 81-89 \\
+Lines 79-87 \\
 ``\quoting{intro_results2}''
 \end{displayquote}
 
@@ -178,19 +178,19 @@ Importantly, we do not claim that these theoretical insights were necessarily de
 One could have come to these conclusions via various combinations of techniques mentioned in Section 5.1.1 Related Methods.
 In the case of the V1 model inference, the main point is to indicate that such insight can be afforded by EPI and its related methods, in contrast to the analytic derivations emblematic of practice in theoretical neuroscience.
 \begin{displayquote}
-Lines 301-309 \\
+Lines 295-303 \\
 ``\quoting{v1_summary}''
 \end{displayquote}
 In the case of the SC model inference, random sampling would have taken prohibitively long, and it is unclear how the continuum between the two connectivity regimes would have been identified with alternative techniques:
 \begin{displayquote}
-Lines 416-419 \\
+Lines 409-412 \\
 ``\quoting{sc_summary}''
 \end{displayquote}
  
 As the reviewers indicate, the STG model analyzed in our manuscript is not that of Prinz et al. 2004, and thus not the model analyzed by the cosubmission (Macke et al).  We chose an alternative model, believing it important to demonstrate inference in biophysically realistic Morris-Lecar models when gradients are tractable, which is the case of the 5-neuron STG model we analyzed from Gutierrez et al. 2013.  This 5-neuron model represents the IC neuron (hub) and its coupling to the pyloric (fast) or gastric mill (slow) subcircuit rhythms.  In the introductory text, we refer to this model as the “STG subcircuit” model (rather than “STG model”), and we better clarify what aspect of the STG is being modeled in Results Section 3.1. 
 
 \begin{displayquote}
-Lines 100-105 \\
+Lines 98-103 \\
 ``\quoting{stg_subcircuit}''
 \end{displayquote}
 
@@ -198,9 +198,9 @@ The difference between this model and the STG model of the pyloric subnetwork is
 
 % Within another quote so need to copy.
 \begin{displayquote}
-Lines 444-447 \\
+Lines 437-440 \\
 ``However, conditioning on the pyloric rhythm \cite{marder1992dynamic} in a model of the pyloric subnetwork model \cite{prinz2004similar} proved to be prohibitive with EPI.
-The pyloric subnetwork requires many time steps for simulation and many key emergent property statistics (e.g. burst duration and phase gap) are not calculable or easily approximated with differentiable functions.\\
+The pyloric subnetwork requires many time steps for simulation and many key emergent property statistics (e.g. burst duration and phase gap) are not calculable or easily approximated with differentiable functions.
 ''
 \end{displayquote}
 
@@ -242,7 +242,7 @@ Inverse problems are indeed a major part of theoretical neuroscience, and their 
 We clarify this point in the introduction:
 
 \begin{displayquote}
-Lines 28-37 \\
+Lines 26-35 \\
 ``\quoting{intro_first}''
 \end{displayquote}
 
@@ -254,7 +254,7 @@ The reviewer is correct to point out that maximum entropy solutions are not repa
 However, we derive the relation of EPI to bayesian variational inference in Section \ref{methods_VI}, which shows EPI uses a uniform prior when framed as variational inference.
 
 \begin{displayquote}
-Lines 1026-1029 \\
+Lines 1021-1025 \\
 ``\quoting{EPI_VI}''
 \end{displayquote}
  
@@ -269,7 +269,7 @@ We appreciate this feedback.  We have adapted the introduction to clarify that w
 We clarify in point 4 above that we are not claiming to produce novel, appreciable scientific insight about the STG subcircuit model, which is used as a motivation example. The takeaway is that the conductance parameters producing intermediate hub frequency belong to a complex 2-D distribution, which EPI captures accurately, and that EPI can tell us the parameter changes away from the prototypical configuration that change hub frequency the most or least.  For example, for increases in $g_{\text{el}}$ and $g_{\text{synA}}$ according to the proportions of the degenerate dimension of parameter space, intermediate hub neuron frequency will be preserved in this model.  This suggests that in the real STG neural circuit, the IC neuron will remain at an intermediate frequency between the pyloric and gastric mill rhythms if parameter changes are made along such a dimension.
 
 \begin{displayquote}
-Lines 175 -177 \\
+Lines 171 -173 \\
 ``The directionality of $\mathbf{v}_2$ suggests that changes in conductance along this parameter combination will most preserve hub neuron firing between the intrinsic rates of the pyloric and gastric mill rhythms.''
 \end{displayquote}
  
@@ -328,22 +328,22 @@ Even in high dimensions, trained deep probability distributions offer tractable 
 In the current manuscript, we make sure to explain all choices of the emergent property constraints  Here, we show the description of each emergent property with equations omitted.
 
 \begin{displayquote}
-Section \ref{results_dgm}, Lines 139-143\\
+Section \ref{results_dgm}, Lines 136-140\\
 ``\quoting{stg_ep_text1}~\quoting{stg_ep_text2}.''
 \end{displayquote}
 
 \begin{displayquote}
-Section \ref{results_RNN}, Lines 204-210\\
+Section \ref{results_RNN}, Lines 200-206 \\
 ``\quoting{rnn_ep_text1}~... \quoting{rnn_ep_text2}~\quoting{rnn_ep_text3}''
 \end{displayquote}
 
 \begin{displayquote}
-Section \ref{results_V1}, Lines 280-283\\
+Section \ref{results_V1}, Lines 274-277\\
 ``\quoting{v1_ep_text1}~\quoting{v1_ep_text2}''
 \end{displayquote}
 
 \begin{displayquote}
-Section \ref{results_SC}, Lines 338-341\\
+Section \ref{results_SC}, Lines 329-332\\
 ``\quoting{sc_ep_text1}.~\quoting{sc_ep_text2}''
 \end{displayquote}
 \textbf{Minor points }
@@ -392,9 +392,8 @@ The STG subcircuit model of Gutierrez et al. 2013 is certainly less complex than
 We clarify why this model is analyzed in Section \ref{results_motivating} instead of more complex STG models when discussing the differences between EPI and SNPE in Discussion:
 
 \begin{displayquote}
-Lines 439-451\\
+Lines 432-444\\
 ``\quoting{discussion_gradients}''
-
 \end{displayquote}
 
 \textbf{4) The discussion should be expanded to be more specific about what problems the authors think the model is, or is not, appropriate for. Comparisons to the Goncalves article would also be helpful since users will want to know the comparative advantages/disadvantages of each method. (if the authors could coordinate running their methods on a common illustrative example, that would be cool, but not required). }
@@ -403,7 +402,7 @@ Thank you for this recommendation.
 We now include substantial text in discussion devoted to this topic in addition to that quoted in the previous response (R3 concern \#3).
 
 \begin{displayquote}
-Lines 431-438\\
+Lines 424-444\\
 ``\quoting{discussion_methods} \\ \quoting{discussion_gradients}''
 \end{displayquote}
 
@@ -436,7 +435,7 @@ We have made sure to make this explicit in each section of the paper.
 
 \item \textbf{The augmented Lagrangian optimization was not well explained or motivated. There is a reference to m=absolute value(mu) but I didn't see m in the above equation.}
 
-Lines X-Y \\
+Lines 764-766 \\
 \begin{displayquote}
 ``\quoting{AL_standard}"
 \end{displayquote}
