--- a/notebooks/SC_Circuit/SC_acc_EPI_var_2.ipynb
+++ b/notebooks/SC_Circuit/SC_acc_EPI_var_2.ipynb
@@ -99,66 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing EPI: D=4, rs=1.\n",
-      "WARNING:tensorflow:From /Users/sbittner/anaconda/envs/epi/lib/python3.6/site-packages/tensorflow_probability/python/bijectors/real_nvp.py:223: AffineScalar.__init__ (from tensorflow_probability.python.bijectors.affine_scalar) is deprecated and will be removed after 2020-01-01.\n",
-      "Instructions for updating:\n",
-      "`AffineScalar` bijector is deprecated; please use `tfb.Shift(loc)(tfb.Scale(...))` instead.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sbittner/anaconda/envs/epi/lib/python3.6/site-packages/tensorflow/python/keras/legacy_tf_layers/core.py:171: UserWarning: `tf.layers.dense` is deprecated and will be removed in a future version. Please use `tf.keras.layers.Dense` instead.\n",
-      "  warnings.warn('`tf.layers.dense` is deprecated and '\n",
-      "/Users/sbittner/anaconda/envs/epi/lib/python3.6/site-packages/tensorflow/python/keras/engine/base_layer.py:2273: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
-      "  warnings.warn('`layer.apply` is deprecated and '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "k 9 H -0.83731962_0.36\n",
-      "Processing EPI: D=4, rs=1.\n",
-      "k None H None_0.00_0.00\n",
-      "Processing EPI: D=4, rs=2.\n",
-      "k 8 H -4.96793998_0.15\n",
-      "Processing EPI: D=4, rs=2.\n",
-      "k 6 H -2.36376622_0.12\n",
-      "Processing EPI: D=4, rs=3.\n",
-      "k 10 H -0.70725016_0.06\n",
-      "Processing EPI: D=4, rs=3.\n",
-      "k 8 H -12.9337935_0.60\n",
-      "Processing EPI: D=4, rs=4.\n",
-      "k None H None_0.00_0.00\n",
-      "Processing EPI: D=4, rs=4.\n",
-      "k None H None_0.00_0.00\n",
-      "Processing EPI: D=4, rs=5.\n",
-      "k None H None_0.00_0.00\n",
-      "Processing EPI: D=4, rs=5.\n",
-      "k None H None_0.00_0.00\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n_epi_df = epi_df[epi_df[\\'path\\'] == path]\\ndf_row = _epi_df.iloc[0]\\ninit = df_row[\\'init\\']\\ninit_params = {\"mu\":init[\"mu\"], \"Sigma\":init[\"Sigma\"]}\\nnf = model._df_row_to_nf(df_row)\\naug_lag_hps = model._df_row_to_al_hps(df_row)\\n\\ndist = model._get_epi_dist(best_k, init_params, nf, mu, aug_lag_hps)'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "epi_df = model.get_epi_df()\n",
     "\n",
@@ -167,20 +110,7 @@
     "np.random.seed(0)\n",
     "tf.random.set_seed(0)\n",
     "alpha, nu = 0.05, 0.25\n",
-    "dist, path, best_k = get_max_H_dist(model, epi_df, mu, alpha, nu, check_last_k=None)\n",
-    "\n",
-    "#path = paths[0]\n",
-    "#best_k = 10\n",
-    "\n",
-    "\"\"\"\n",
-    "_epi_df = epi_df[epi_df['path'] == path]\n",
-    "df_row = _epi_df.iloc[0]\n",
-    "init = df_row['init']\n",
-    "init_params = {\"mu\":init[\"mu\"], \"Sigma\":init[\"Sigma\"]}\n",
-    "nf = model._df_row_to_nf(df_row)\n",
-    "aug_lag_hps = model._df_row_to_al_hps(df_row)\n",
-    "\n",
-    "dist = model._get_epi_dist(best_k, init_params, nf, mu, aug_lag_hps)\"\"\""
+    "dist, path, best_k = get_max_H_dist(model, epi_df, mu, alpha, nu, check_last_k=None)"
    ]
   },
   {
