--- a/written/eLifeRevision/eLife2021.bib
+++ b/written/eLifeRevision/eLife2021.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-05-05 14:24:33 -0400 
+%% Created for Sean Bittner at 2021-06-07 14:10:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{duan2021collicular,
+	author = {Duan, Chunyu A and Pagan, Marino and Piet, Alex T and Kopec, Charles D and Akrami, Athena and Riordan, Alexander J and Erlich, Jeffrey C and Brody, Carlos D},
+	date-added = {2021-06-07 14:10:23 -0400},
+	date-modified = {2021-06-07 14:10:23 -0400},
+	journal = {Nature Neuroscience},
+	pages = {1--11},
+	publisher = {Nature Publishing Group},
+	title = {Collicular circuits for flexible sensorimotor routing},
+	year = {2021}}
 
 @article{hengl2007data,
 	author = {Hengl, Stefan and Kreutz, Clemens and Timmer, Jens and Maiwald, Thomas},
