--- a/written/eLifeRevision/Bittner_eLife2021.tex
+++ b/written/eLifeRevision/Bittner_eLife2021.tex
@@ -627,10 +627,11 @@ We also acknowledge the Marine Biological Laboratory Methods in Computational Ne
 Helpful conversations were had with Larry Abbott, Stephen Baccus,  James Fitzgerald, Gabrielle Gutierrez,  Francesca Mastrogiuseppe, Srdjan Ostojic, Liam Paninski, and Dhruva Raman.
 
 \textbf{Data availability statement}: \\
-The datasets generated during and/or analyzed during the current study are available from the corresponding author upon reasonable request.
+The datasets generated during this study have been made publicly available on Zenodo at this address: 
+https://doi.org/10.5281/zenodo.4910010 .
 
 \textbf{Code availability statement}: \\
-All software written for the current study is available at https://github.com/cunningham-lab/epi.
+All software written for this study is available at https://github.com/cunningham-lab/epi .
 
 \bibliography{eLife2021}
 \bibliographystyle{unsrt}
